# atom-workspace

./: .gitmodules  CMakeLists.txt  flake.nix
cmake/: Findatom_core.cmake
scripts/: format_all.sh
